# xarray-selafin

./: pyproject.toml  zensical.toml
.github/workflows/: run_tests.yml
docs/: 2d_bathymetry.html  2d_free_surface.html  2d_timeseries.html  3d_bump_scatter.html  3d_bump_z.html  api.md  examples.md  getting-started.md  index.md  scratch_wind.html
requirements/: requirements-dev.txt  requirements.txt
scripts/: generate_plots.py
xarray_selafin/: xarray_backend.py
