[tool.poetry]
name = "xarray-selafin"
version = "0.2.1"
description = ""
authors = ["tomsail <saillour.thomas@gmail.com>", "lucduron <l.duron@cnr.tm.fr>"]
readme = "README.md"
repository = "https://github.com/oceanmodeling/xarray-selafin/"
include = [
    "xarray_selafin/data/*",
    "xarray_selafin/variable/*"
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "*"
xarray = "*"

[tool.poetry.plugins."xarray.backends"]
selafin = "xarray_selafin.xarray_backend:SelafinBackendEntrypoint"

[tool.poetry.group.dev.dependencies]
pytest = "*"
scipy = "*"
xarray = {version = "*",  extras = ["io"]}
dask = "*"
zensical = "*"
hvplot = "*"
jupyter-bokeh = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
line-length = 107
